--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas": "^3.1.0",
     "framer-motion": "^11.0.3",
     "next": "15.3.0",
     "react": "^19.1.0",
